<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp"
        app:cardMaxElevation="80dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="15dp"
                        android:text="@string/from"
                        android:textSize="30sp" />

                    <Spinner
                        android:id="@+id/from_spinner"
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:spinnerMode="dropdown"
                        android:textAlignment="center" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="15dp"
                        android:text="@string/to"
                        android:textSize="30sp" />


                    <Spinner
                        android:id="@+id/to_spinner"
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:textAlignment="center" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp"
        app:cardMaxElevation="80dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon_from_currency"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="25dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/united_states" />

                <EditText
                    android:id="@+id/input_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:hint="@string/input_field"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/icon_to_currency"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:src="@drawable/morocco"
                    android:contentDescription="@string/app_name"/>
            </RelativeLayout>

            <Button
                android:id="@+id/button_convert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:text="@string/button_text"
                android:textAllCaps="false"
                android:textSize="25sp">

            </Button>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/result_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp"
        app:cardMaxElevation="80dp"
        app:cardPreventCornerOverlap="true">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/result_field"
            android:textSize="60sp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>